@@ -1,7 +1,7 @@
 package com.penguinmc.auction;
 
-import net.kyori.adventure.text.Component;
 import org.bukkit.Bukkit;
+import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
@@ -16,6 +16,7 @@ import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import java.util.*;
+import java.util.logging.Level;
 
 public class PenguinAuctionHouse extends JavaPlugin implements Listener, CommandExecutor {
 
@@ -28,7 +29,7 @@ public class PenguinAuctionHouse extends JavaPlugin implements Listener, Command
     private int defaultSlots;
     private long expireMillis;
 
-    private final List<Material> validCurrencies = List.of(
+    private final List<Material> validCurrencies = Arrays.asList(
             Material.DIAMOND,
             Material.IRON_INGOT,
             Material.NETHERITE_INGOT,
@@ -39,30 +40,43 @@ public class PenguinAuctionHouse extends JavaPlugin implements Listener, Command
     @Override
     public void onEnable() {
         instance = this;
-        saveDefaultConfig();
-        defaultSlots = getConfig().getInt("max_slots_per_player.default", 2);
-        expireMillis = getConfig().getLong("listing_expire_hours", 23) * 60 * 60 * 1000;
+        try {
+            saveDefaultConfig();
+            defaultSlots = getConfig().getInt("max_slots_per_player.default", 2);
+            expireMillis = getConfig().getLong("listing_expire_hours", 23L) * 60L * 60L * 1000L;
 
-        getCommand("ah").setExecutor(this);
-        getServer().getPluginManager().registerEvents(this, this);
-
-        // Task kiểm tra hết hạn
-        Bukkit.getScheduler().runTaskTimer(this, () -> {
-            long now = System.currentTimeMillis();
-            Iterator<AuctionItem> it = activeListings.iterator();
-            while (it.hasNext()) {
-                AuctionItem ai = it.next();
-                if (!ai.sold && ai.expireTime <= now) {
-                    Player seller = Bukkit.getPlayer(ai.seller);
-                    if (seller != null) seller.getInventory().addItem(ai.item.clone());
-                    it.remove();
-                    List<AuctionItem> list = playerListings.get(ai.seller);
-                    if (list != null) list.remove(ai);
-                }
+            if (getCommand("ah") == null) {
+                getLogger().warning("Command 'ah' not defined in plugin.yml");
+            } else {
+                getCommand("ah").setExecutor(this);
             }
-        }, 20*60, 20*60);
 
-        getLogger().info("PenguinAuctionHouse enabled!");
+            getServer().getPluginManager().registerEvents(this, this);
+
+            // Task kiểm tra hết hạn (chạy mỗi 1 phút; đổi nếu muốn)
+            Bukkit.getScheduler().runTaskTimer(this, () -> {
+                long now = System.currentTimeMillis();
+                Iterator<AuctionItem> it = activeListings.iterator();
+                while (it.hasNext()) {
+                    AuctionItem ai = it.next();
+                    if (!ai.sold && ai.expireTime <= now) {
+                        Player seller = Bukkit.getPlayer(ai.seller);
+                        if (seller != null) {
+                            Map<Integer, ItemStack> leftover = seller.getInventory().addItem(ai.item.clone());
+                            // nếu leftover không rỗng thì drop ra thế giới hoặc gửi tin nhắn
+                        }
+                        it.remove();
+                        List<AuctionItem> list = playerListings.get(ai.seller);
+                        if (list != null) list.remove(ai);
+                    }
+                }
+            }, 20L * 60L, 20L * 60L);
+
+            getLogger().info("PenguinAuctionHouse enabled!");
+        } catch (Throwable t) {
+            getLogger().log(Level.SEVERE, "Failed to enable PenguinAuctionHouse", t);
+            getServer().getPluginManager().disablePlugin(this);
+        }
     }
 
     @Override
@@ -76,7 +90,7 @@ public class PenguinAuctionHouse extends JavaPlugin implements Listener, Command
 
         if (args.length > 0 && args[0].equalsIgnoreCase("sell")) {
             if (args.length < 3) {
-                p.sendMessage(Component.text("§cUsage: /ah sell <amount> <currency>"));
+                p.sendMessage(ChatColor.RED + "Usage: /ah sell <amount> <currency>");
                 return true;
             }
 
@@ -84,21 +98,27 @@ public class PenguinAuctionHouse extends JavaPlugin implements Listener, Command
             try {
                 currency = Material.valueOf(args[2].toUpperCase());
             } catch (Exception e) {
-                p.sendMessage(Component.text("§cCurrency invalid! Must be: DIAMOND, IRON_INGOT, NETHERITE_INGOT, EMERALD, GOLD_INGOT"));
+                p.sendMessage(ChatColor.RED + "Currency invalid! Must be: DIAMOND, IRON_INGOT, NETHERITE_INGOT, EMERALD, GOLD_INGOT");
                 return true;
             }
 
             if (!validCurrencies.contains(currency)) {
-                p.sendMessage(Component.text("§cCurrency not supported!"));
+                p.sendMessage(ChatColor.RED + "Currency not supported!");
                 return true;
             }
 
             int amount;
-            try { amount = Integer.parseInt(args[1]); } catch (Exception e) { p.sendMessage(Component.text("§cAmount invalid!")); return true; }
+            try { amount = Integer.parseInt(args[1]); } catch (Exception e) { p.sendMessage(ChatColor.RED + "Amount invalid!"); return true; }
+            if (amount <= 0) { p.sendMessage(ChatColor.RED + "Amount must be positive!"); return true; }
 
             ItemStack hand = p.getInventory().getItemInMainHand();
             if (hand == null || hand.getType() == Material.AIR) {
-                p.sendMessage(Component.text("§cYou must hold an item to sell!"));
+                p.sendMessage(ChatColor.RED + "You must hold an item to sell!");
+                return true;
+            }
+
+            if (hand.getAmount() < amount) {
+                p.sendMessage(ChatColor.RED + "You don't have enough amount in hand!");
                 return true;
             }
 
@@ -109,31 +129,37 @@ public class PenguinAuctionHouse extends JavaPlugin implements Listener, Command
 
             List<AuctionItem> listings = playerListings.getOrDefault(p.getUniqueId(), new ArrayList<>());
             if (listings.size() >= maxSlots) {
-                p.sendMessage(Component.text("§cYou reached your auction slot limit!"));
+                p.sendMessage(ChatColor.RED + "You reached your auction slot limit!");
                 return true;
             }
 
             ItemStack itemClone = hand.clone();
             itemClone.setAmount(amount);
-            hand.setAmount(hand.getAmount() - amount);
+
+            int newAmount = hand.getAmount() - amount;
+            if (newAmount <= 0) {
+                p.getInventory().setItemInMainHand(null);
+            } else {
+                hand.setAmount(newAmount);
+            }
 
             AuctionItem ai = new AuctionItem(UUID.randomUUID(), p.getUniqueId(), itemClone, System.currentTimeMillis() + expireMillis, currency);
             listings.add(ai);
             playerListings.put(p.getUniqueId(), listings);
             activeListings.add(ai);
 
-            p.sendMessage(Component.text("§aItem listed successfully!"));
+            p.sendMessage(ChatColor.GREEN + "Item listed successfully!");
             return true;
         }
 
-        // Open GUI
+        // Open GUI (legacy string title for compatibility)
         openGUI(p, 0);
         return true;
     }
 
     private void openGUI(Player p, int page) {
         int size = 54;
-        Inventory gui = Bukkit.createInventory(null, size, Component.text("§6PenguinAH"));
+        Inventory gui = Bukkit.createInventory(null, size, ChatColor.GOLD + "PenguinAH");
         currentPages.put(p.getUniqueId(), page);
 
         int start = page * 45;
@@ -143,40 +169,43 @@ public class PenguinAuctionHouse extends JavaPlugin implements Listener, Command
             gui.setItem(i - start, activeListings.get(i).item.clone());
         }
 
-        gui.setItem(45, createButton(Material.ARROW, Component.text("§aPrevious Page")));
-        gui.setItem(53, createButton(Material.ARROW, Component.text("§aNext Page")));
-        gui.setItem(49, createButton(Material.CHEST, Component.text("§eReset / Retrieve Items")));
+        gui.setItem(45, createButton(Material.ARROW, ChatColor.GREEN + "Previous Page"));
+        gui.setItem(53, createButton(Material.ARROW, ChatColor.GREEN + "Next Page"));
+        gui.setItem(49, createButton(Material.CHEST, ChatColor.YELLOW + "Reset / Retrieve Items"));
 
         p.openInventory(gui);
     }
 
-    private ItemStack createButton(Material mat, Component name) {
+    private ItemStack createButton(Material mat, String name) {
         ItemStack b = new ItemStack(mat);
         ItemMeta m = b.getItemMeta();
-        m.displayName(name);
-        b.setItemMeta(m);
+        if (m != null) {
+            m.setDisplayName(name);
+            b.setItemMeta(m);
+        }
         return b;
     }
 
     @EventHandler
     public void onInventoryClick(InventoryClickEvent e) {
         if (!(e.getWhoClicked() instanceof Player p)) return;
-        if (!e.getView().title().equals(Component.text("§6PenguinAH"))) return;
+        String title = e.getView().getTitle(); // legacy-compatible
+        if (!ChatColor.stripColor(title).equals("PenguinAH")) return;
         e.setCancelled(true);
 
         ItemStack clicked = e.getCurrentItem();
         if (clicked == null || clicked.getType() == Material.AIR) return;
         ItemMeta meta = clicked.getItemMeta();
         if (meta == null || !meta.hasDisplayName()) return;
-        Component name = meta.displayName();
+        String name = meta.getDisplayName();
 
-        if (name.equals(Component.text("§aNext Page"))) {
+        if (name.equals(ChatColor.GREEN + "Next Page")) {
             int current = currentPages.getOrDefault(p.getUniqueId(), 0);
             openGUI(p, current + 1);
-        } else if (name.equals(Component.text("§aPrevious Page"))) {
+        } else if (name.equals(ChatColor.GREEN + "Previous Page")) {
             int current = currentPages.getOrDefault(p.getUniqueId(), 0);
             if (current > 0) openGUI(p, current - 1);
-        } else if (name.equals(Component.text("§eReset / Retrieve Items"))) {
+        } else if (name.equals(ChatColor.YELLOW + "Reset / Retrieve Items")) {
             List<AuctionItem> myList = playerListings.getOrDefault(p.getUniqueId(), new ArrayList<>());
             for (AuctionItem ai : new ArrayList<>(myList)) {
                 if (!ai.sold) {
@@ -185,7 +214,7 @@ public class PenguinAuctionHouse extends JavaPlugin implements Listener, Command
                     myList.remove(ai);
                 }
             }
-            p.sendMessage(Component.text("§aYour unsold items have been returned!"));
+            p.sendMessage(ChatColor.GREEN + "Your unsold items have been returned!");
             openGUI(p, 0);
         } else {
             // Buying logic
@@ -198,22 +227,14 @@ public class PenguinAuctionHouse extends JavaPlugin implements Listener, Command
             }
             if (target == null) return;
             if (target.seller.equals(p.getUniqueId())) {
-                p.sendMessage(Component.text("§cYou cannot buy your own item!"));
+                p.sendMessage(ChatColor.RED + "You cannot buy your own item!");
                 return;
             }
 
             int costAmount = target.item.getAmount();
-            boolean hasEnough = false;
-            for (ItemStack invItem : p.getInventory().getContents()) {
-                if (invItem != null && invItem.getType() == target.currency && invItem.getAmount() >= costAmount) {
-                    invItem.setAmount(invItem.getAmount() - costAmount);
-                    hasEnough = true;
-                    break;
-                }
-            }
-
-            if (!hasEnough) {
-                p.sendMessage(Component.text("§cYou don't have enough " + target.currency.name() + " to buy this item!"));
+            Map<Integer, ItemStack> leftover = p.getInventory().removeItem(new ItemStack(target.currency, costAmount));
+            if (!leftover.isEmpty()) {
+                p.sendMessage(ChatColor.RED + "You don't have enough " + target.currency.name() + " to buy this item!");
                 return;
             }
 
@@ -223,10 +244,11 @@ public class PenguinAuctionHouse extends JavaPlugin implements Listener, Command
 
             target.sold = true;
             activeListings.remove(target);
-            playerListings.get(target.seller).remove(target);
+            List<AuctionItem> sellerList = playerListings.get(target.seller);
+            if (sellerList != null) sellerList.remove(target);
 
-            p.sendMessage(Component.text("§aPurchase successful!"));
-            if (seller != null) seller.sendMessage(Component.text("§aYour item has been sold!"));
+            p.sendMessage(ChatColor.GREEN + "Purchase successful!");
+            if (seller != null) seller.sendMessage(ChatColor.GREEN + "Your item has been sold!");
             openGUI(p, currentPages.getOrDefault(p.getUniqueId(), 0));
         }
     }
